# Linux-Web

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  用户手册.md
.github/workflows/: python-app.yml
app/: __init__.py  main.py  storage.py
app/static/: app.js  index.html  manual.html  styles.css
deploy/: deploy-v2.sh  deploy.sh  storage-manager.service
src/: __init__.py  schemas.py
src/database/: __init__.py  core.py  crud.py  models.py
tests/: __init__.py  mock_db.py  test_api.py  test_storage.py
