[project]
name = "storage-manager"
version = "2.0.0"
description = "Linux 存储管理 Web 面板（Linux Storage Manager Web Panel）"
authors = [
    {name = "李泽源、谢子墨"},
]
keywords = ["linux", "storage", "fastapi", "web", "manager", "mount", "filesystem"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "sqlalchemy>=2.0.0",
    "python-multipart>=0.0.6",
    "httpx>=0.25.0",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.25.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/storage-manager"
Repository = "https://github.com/yourusername/storage-manager"
Documentation = "https://github.com/yourusername/storage-manager/blob/main/README.md"
Issues = "https://github.com/yourusername/storage-manager/issues"
